# Multitasking-bot

./: README.md  bot.py  config.py  pyproject.toml
src/currency/: handlers.py  states.py  utils.py
src/main/: handlers.py  keyboards.py  utils.py
src/poll/: handlers.py  keyboards.py  states.py
src/weather/: handlers.py  states.py  utils.py
